--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
 
     // text
     <dimen name="text_large_header">30sp</dimen>
+    <dimen name="text_semi_large_header">28sp</dimen>
     <dimen name="text_header">24sp</dimen>
     <dimen name="text_extra_large">20sp</dimen>
     <dimen name="text_large">16sp</dimen>
