--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:fontFamily">@font/inter_regular</item>
         <item name="android:textSize">@dimen/text_medium</item>
         <item name="android:scrollbarThumbVertical">@color/color_transparent</item>
         <item name="android:itemBackground">@color/white</item>
+        <item name="chipStyle">@style/FilterChip</item>
         <item name="android:textColor">@color/black</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
         <item name="bottomNavigationStyle">
@@ -41,7 +44,29 @@
         <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
 
-    <!--    edit text    -->
+    <!--    text styles    -->
+    <style name="Header" parent="AppTheme">
+        <item name="fontFamily">@font/playfair_display_semi_bold</item>
+        <item name="android:textSize">@dimen/text_semi_large_header</item>
+    </style>
+
+    <style name="NewsHeader" parent="AppTheme">
+        <item name="fontFamily">@font/playfair_display_semi_bold</item>
+        <item name="android:textSize">@dimen/text_extra_large</item>
+    </style>
+
+    <style name="NewsTopic" parent="AppTheme">
+        <item name="fontFamily">@font/inter_regular</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+    </style>
+
+    <style name="SmallGreySubtitle" parent="AppTheme">
+        <item name="android:fontFamily">@font/inter_regular</item>
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
+
+    <!--    editText    -->
     <style name="EditText" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxCornerRadiusBottomEnd">@dimen/edit_text_corner_radius</item>
         <item name="boxCornerRadiusBottomStart">@dimen/edit_text_corner_radius</item>
@@ -50,6 +75,21 @@
         <item name="boxStrokeColor">@color/black</item>
         <item name="hintTextColor">@color/black</item>
         <item name="android:textCursorDrawable">@color/black</item>
+    </style>
+
+    <!--    chips    -->
+    <style name="FilterChip" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/white</item>
+        <item name="chipStrokeColor">@color/grey</item>
+        <item name="chipStrokeWidth">1dp</item>
+        <item name="checkedIconVisible">false</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearance.App.SmallComponent</item>
+    </style>
+
+    <style name="ShapeAppearance.App.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">cut</item>
+        <item name="cornerSize">0dp</item>
     </style>
 
 </resources>
